--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,8 @@
 		</div>
 	</div>
 </div>
-
+<p class="notice"><%= notice %></p>
+       <p class="alert"><%= alert %></p>
 <div class="container">
 	<%= yield %>
 </div>
